--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
       <h1>PAPER - ROCK - SCISSORS</h1>
       
       <div id="options">
-       <button onclick="click('rock')">👊</button>
-       <button onclick="click('paper')">✋</button>
-       <button onclick="click('scissors')">✌️</button>
+       <button onclick="clickGame('rock')">👊</button>
+       <button onclick="clickGame('paper')">✋</button>
+       <button onclick="clickGame('scissors')">✌️</button>
       </div>
     
         <div id="playerDisplay">Player:</div>
