--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@
         <div id="Computer">Computer:</div>
         <div id="TheResult"></div>
 
-    <div class="score">
+    <div class="score">Player score:
         <span id="Player">0</span>
     </div>
-      <div class="score">
+      <div class="score">Computer score:
         <span id="Computer">0</span>
     </div>
 
