--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <span id="Player">0</span>
     </div>
       <div class="score">Computer score:
-        <span id="Computer">0</span>
+        <span id="Computerscore">0</span>
     </div>
 
     <script src="index.js"></script>
